changes since 1.0 (02.06.04):

added:
- Stereo Modi: Side-by-Side and for shutter googles 
- Clipping Planes
- Writing and loading of BALLView project files
- Hotkey support for starting any (BALL-)Python command from BALLView
- new application: DCD2PNG to create series of PNG-images from a DCD trajectory file
- managment of 1D and 2D grids in DatasetControl
  ability of DatasetControl to start visualisation of 1D and 2D grids
  1D and 2D RegularDataWidgets update their contents automaticaly
- Ramachandran Plot
- Fog in Scene and its settings to Preferences
- Visualisation of forces
- Benchmark Scripts for BALLView
- Visualisation for double-, triple- and aromatic bonds in BallAndStick Model
- Preferences for material parameters in OpenGL
- added more classes to the Python SIP interface

fixed:
- selection in MolecularControl with CRTG and SHIFT modifier
- Cartoon model had problems with missing atoms 
- creation of models for several selected items
- overall cleanup of RegularDataWidgets
- export of PNGs could result in strange problems e.g. with empty images
- it was possible to delete molecular entities while simulation was running -> core dump
- PeptideDialog: deletion of sequence
- problem with normals in Cartoon model
- issue with restoring window's geometry on X11 (still buggy on some X-Servers)
- restoring of working dir

changed:
- inside of surfaces gets now correctly drawn
- increased OpenGL performance 
- .BALLView config files are now always stored in the users homedir
- Scene Preferences
- GeometricObjects no longe have names
- removed Information Processor for GeometricObjects
- interface for the methods ModularWidget::applyPreferences, defaultPreferences, cancelPreferences
- interface for the property "hidden" of Representation's